<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".mvvm.view.activity.mypage.LegalNoticeActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/activity_legal_notice_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ToolbarStyle" />
    </android.support.design.widget.AppBarLayout>

    <TextView
        android:id="@+id/activity_legal_notice_termsServiceTv"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center_vertical"
        android:paddingStart="24dp"
        android:text="@string/activity_legal_notice_termsConditions" />

    <TextView
        android:id="@+id/activity_legal_notice_privacyPolicyTv"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center_vertical"
        android:paddingStart="24dp"
        android:text="@string/activity_legal_notice_privacyPolicy" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center_vertical"
        android:paddingStart="24dp"
        android:text="@string/activity_legal_notice_openLicenses" />
</LinearLayout>