<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mvvm.view.fragment.dialog.LocationDialogFragment">

    <TextView
        android:id="@+id/fragment_location_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:text="@string/fragment_location_dialog_title"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/fragment_location_dialog_checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:paddingStart="5dp"
        android:text="000시 000동"
        app:layout_constraintTop_toBottomOf="@+id/fragment_location_dialog_title" />

    <TextView
        android:id="@+id/fragment_location_dialog_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="24dp"
        android:minWidth="280dp"
        app:layout_constraintTop_toBottomOf="@+id/fragment_location_dialog_checkBox" />

    <Button
        android:id="@+id/fragment_location_dialog_yesBtn"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/dialog_positive_check"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_location_dialog_content" />

    <Button
        android:id="@+id/fragment_location_dialog_cancelBtn"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/dialog_negative_cancel"
        app:layout_constraintEnd_toStartOf="@+id/fragment_location_dialog_yesBtn"
        app:layout_constraintTop_toBottomOf="@+id/fragment_location_dialog_content" />


</android.support.constraint.ConstraintLayout>