<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.imhc2.plumboard.mvvm.view.fragment.bottomsheets.ProfileFragment">

    <LinearLayout
        android:id="@+id/fragment_profile_camera_ll"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            app:srcCompat="@drawable/ic_camera_color" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_profile_takePicktureTv"
            android:textColor="#000000"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fragment_profile_camera_gallery"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            app:srcCompat="@drawable/ic_gallery_color" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_profile_ChoiceGalleryTv"
            android:textColor="#000000"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fragment_profile_human_ll"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            app:srcCompat="@drawable/ic_human_color" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_profile_basicImageTv"
            android:textColor="#000000"
            android:textSize="14sp" />
    </LinearLayout>


</LinearLayout>
